--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,2 @@
-<div class="text-layout">
-  <h1>{{ nombre | titlecase }}</h1>
-  <h2>{{valor|number}}</h2>
-  <h2>{{obj|json}}</h2>
-
-  <button icon="pi pi-check" class="p-button-help" iconPos="right"  (click)="mostrarNombre()" pButton type="button" label="Cambiar Nombre" ></button>
-  <p-card [header]="nombre | titlecase" subheader="Card Subheader" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-        quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-</p-card>
-</div>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
