--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -4,14 +4,62 @@
 </div>
 
 <div class="p-grid">
+
   <div class="p-col p-md-6">
     <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-     Saludos {{nombre}}, es un placer {{genero |i18nSelect:invitacionMapa}}
-  </p-fieldset>
+      <p>Saludos {{nombre}}, es un placer {{genero |i18nSelect:invitacionMapa}}</p>
+      <button (click)="cambiarCliente()" pButton pRipple type="button" label="Cambiar Género"
+        class="p-button-rounded p-button-help"></button>
+    </p-fieldset>
   </div>
+
   <div class="p-col p-md-6">
     <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-      Actualmente {{clientes.length |i18nPlural:clientesMapa}}
-  </p-fieldset>
+      <p>Actualmente {{clientes.length |i18nPlural:clientesMapa}}</p>
+      <button (click)="borrarCliente()" pButton pRipple type="button" label="Borrar Cliente"
+        class="p-button-rounded p-button-warning"></button>
+
+    </p-fieldset>
   </div>
+
+  <div class="p-col p-md-6">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <b>Origianl</b>
+      <pre>{{clientes}}</pre>
+
+
+      <b>Slice 0,2</b>
+      <pre>{{clientes |slice:0:2}}</pre>
+
+      <b>Slice 1,2</b>
+      <pre>{{clientes |slice:1:2}}</pre>
+
+      <b>Slice 1,3</b>
+      <pre>{{clientes |slice:1:3}}</pre>
+    </p-fieldset>
+  </div>
+
+  <div class="p-col p-md-6">
+    <p-fieldset legend="Json Pipe" [toggleable]="true">
+      <pre>{{heroes |json}}</pre>
+    </p-fieldset>
+  </div>
+
+  <div class="p-col p-md-6">
+    <p-fieldset legend="Key Value Pipe" [toggleable]="true">
+      <ul>
+        <li *ngFor="let item of persona |keyvalue">
+          {{item.key | titlecase}}:{{item.value}}
+        </li>
+      </ul>
+    </p-fieldset>
+  </div>
+
+  <div class="p-col p-md-6">
+    <p-fieldset legend="Async Pipe" [toggleable]="true">
+      <pre>{{miObservable |async}}</pre>
+      <pre>{{valorPromesa | async}}</pre>
+    </p-fieldset>
+  </div>
+
 </div>
