--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,94 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+  <h1>Pipes Personalizados</h1>
+  <p>Pipes hechos por {{ "nosotros" | mayusculas: enMayusculas }}</p>
+</div>
+
+<p-toolbar>
+  <div class="p-toolbar-group-left"></div>
+
+  <div class="p-toolbar-group-right">
+    <button
+      (click)="toggleMayus()"
+      pButton
+      pRipple
+      type="button"
+      label="Mayusculas"
+      class="p-button-help p-mr-1"
+    ></button>
+    <button
+      pButton
+      icon="pi pi-sort"
+      (click)="cambiarOrden('nombre')"
+      label="Ordenar por nombre"
+      class="p-mr-1"
+    ></button>
+    <button
+      pButton
+      icon="pi pi-sort"
+      label="Vuela"
+      (click)="cambiarOrden('vuela')"
+      class="p-mr-1 p-button-success"
+    ></button>
+    <button
+    pButton
+    icon="pi pi-sort"
+    label="Por color"
+    (click)="cambiarOrden('color')"
+
+    class="p-mr-1 p-button-danger"
+  ></button>
+  </div>
+</p-toolbar>
+
+<div class="col-grid">
+  <div class="p-col">
+    <p-table [value]="heroes |ordenar:ordenarPor" responsiveLayout="scroll">
+      <ng-template pTemplate="header">
+          <tr>
+              <th>Nombre</th>
+              <th>Vuela</th>
+              <th>Color</th>
+
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-heroe>
+          <tr>
+              <td>{{ heroe.nombre }}</td>
+              <td>{{ heroe.vuela | vuela | titlecase }}</td>
+              <td>{{ heroe.color }}</td>
+
+          </tr>
+      </ng-template>
+  </p-table>
+
+  </div>
+</div>
+
+
+<div class="col-grid">
+  <div class="p-col">
+    <p-table [value]="heroes" responsiveLayout="scroll">
+      <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="nombre">Nombre <p-sortIcon field="Nombre"></p-sortIcon></th>
+            <th pSortableColumn="vuela">Vuela <p-sortIcon field="vuela"></p-sortIcon></th>
+            <th pSortableColumn="color">Color <p-sortIcon field="color"></p-sortIcon></th>
+
+
+
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-heroe>
+          <tr>
+              <td>{{ heroe.nombre }}</td>
+              <td>{{ heroe.vuela | vuela | titlecase }}</td>
+              <td>{{ heroe.color }}</td>
+
+          </tr>
+      </ng-template>
+  </p-table>
+
+  </div>
+</div>
+
+
